--- a/example/index.html
+++ b/example/index.html
@@ -33,11 +33,7 @@
         <img src="https://bloximages.chicago2.vip.townnews.com/postregister.com/content/tncms/assets/v3/editorial/2/93/29382f67-0d0a-551a-b827-bedb1221cb60/5bb39dc17a290.image.jpg">
     </div>
 
-    <script src="../dist/main.js"></script>
-    <script>
-        // slider.init({ id: 'slider1', width: 400, height: 300 });
-        // slider.init({ id: 'slider2', width: 800, height: 600 });
-    </script>
+    <script src="../build/main.bundle.js"></script>
 </body>
 
 </html>
